--- a/CSS/layoutdoFlex/execício de fixação/style.css
+++ b/CSS/layoutdoFlex/execício de fixação/style.css
@@ -1,10 +1,15 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .header{
     background-color: #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 25px;
 }
 
 .rock{
@@ -13,4 +18,25 @@
 
 .logo{
     width: 200px;
+}
+
+.button{
+    display: flex;
+    gap: 10px;
+}
+
+.buttonHeader{
+    font-size: 20px;
+    padding: 10px 15px;
+    border-radius: 10px;
+    background-color: transparent;
+    border-color: white;
+    color: white;
+    cursor: pointer;
+    transition: 0,4s;
+}
+
+.buttonHeader:hover{
+    background-color: lightgrey;
+    border-color: #ff0044;
 }
