--- a/CSS/layoutdoFlex/style.css
+++ b/CSS/layoutdoFlex/style.css
@@ -10,11 +10,12 @@
     gap: 0px 15px;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    /*flex-direction: column;*/
+    /*flex-wrap: wrap;*/
 }
 .item{
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 70px;
     border: 2px solid black;
     background-color: white;
     font-size: 20px;
@@ -22,5 +23,23 @@
     gap: 0px 15px;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+
+}
+
+.item1{
+    order: 2;
+    align-self: flex-start;
+}
+
+.item2{
+    order: 3;
+}
+
+.item3{
+    order: 1;
+}
+@media(max-width: 390px){
+    .item2{
+        flex: 1 0 620px;
+    }
 }
