--- a/CSS/layoutdoGrid/style.css
+++ b/CSS/layoutdoGrid/style.css
@@ -6,11 +6,33 @@
 .container{
     background-color: #a9a9a9;
     min-height: 100vh;
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+    gap:10px 15px;
+    grid-auto-rows: minmax(210px, 100%);
 }
 .item{
-    width: 200px;
-    height: 200px;
     border: 2px solid black;
     background-color: white;
-    font-size: 20px;
+    font-size: 30px;
+}
+.item1{
+    grid-column: 1/4;
+}
+.item2{
+    grid-column: 1/3;
+}
+.item5{
+    grid-column: 2/4;
+}
+.item6{
+    grid-column: 1/3;
+    grid-row: 4/6;
+}
+.item8{
+    grid-column: 3/4;
+    grid-row: 5/6;
+}
+.item9{
+    grid-column: 1/4;
 }
