--- a/CSS/layoutdoGrid/style.css
+++ b/CSS/layoutdoGrid/style.css
@@ -9,7 +9,17 @@
     display: grid;
     grid-template-columns:repeat(3, 1fr);
     gap:10px 15px;
-    grid-auto-rows: minmax(210px, 100%);
+    grid-auto-rows: minmax(80px, auto);
+    grid-template-areas: 
+    "item1 item1 item1"
+    "item2 item2 item3"
+    "item2 item2 item4"
+    "item5 item5 item5"
+    "item5 item5 item5"
+    "item6 item7 item7"
+    "item8 item7 item7"
+    "item9 item9 item9"
+    ;
 }
 .item{
     border: 2px solid black;
@@ -17,22 +27,29 @@
     font-size: 30px;
 }
 .item1{
-    grid-column: 1/4;
+    grid-area: item1;
 }
 .item2{
-    grid-column: 1/3;
+   grid-area: item2;
 }
+.item3{
+    grid-area: item3;
+ }
+.item4{
+    grid-area: item4;
+ }
 .item5{
-    grid-column: 2/4;
+    grid-area: item5;
 }
 .item6{
-    grid-column: 1/3;
-    grid-row: 4/6;
+    grid-area: item6;
+}
+.item7{
+    grid-area: item7;
 }
 .item8{
-    grid-column: 3/4;
-    grid-row: 5/6;
+    grid-area: item8;
 }
 .item9{
-    grid-column: 1/4;
+    grid-area: item9;
 }
